--- a/courses.html
+++ b/courses.html
@@ -45,86 +45,104 @@
             <div class="courses-grid">
                 <!-- Course 1 -->
                 <div class="course-card">
-                    <div class="course-header">
-                        <h3>Python Internship</h3>
-                        <span class="course-price">₹500</span>
+                    <img src="images\Py.webp" height="150" width="280" alt="Python Internship" class="course-image">
+                    <div class="course-content">
+                        <div class="course-header">
+                            <h3>Python Internship</h3>
+                            <span class="course-price">₹500</span>
+                        </div>
+                        <div class="course-details">
+                            <p><strong>Duration:</strong> 4 weeks</p>
+                            <p><strong>Level:</strong> Beginner</p>
+                        </div>
+                        <p class="course-description">Learn Python programming from scratch with practical projects.</p>
+                        <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Enroll Now</a>
                     </div>
-                    <div class="course-details">
-                        <p><strong>Duration:</strong> 4 weeks</p>
-                        <p><strong>Level:</strong> Beginner to Intermediate</p>
-                    </div>
-                    <p class="course-description">Learn Python programming from scratch with practical projects. Perfect for beginners looking to start their coding journey.</p>
-                    <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Enroll Now</a>
                 </div>
 
                 <!-- Course 2 -->
                 <div class="course-card">
-                    <div class="course-header">
-                        <h3>MS Office with AI</h3>
-                        <span class="course-price">₹400</span>
+                    <img src="/placeholder.svg?height=150&width=280" alt="MS Office with AI" class="course-image">
+                    <div class="course-content">
+                        <div class="course-header">
+                            <h3>MS Office with AI</h3>
+                            <span class="course-price">₹400</span>
+                        </div>
+                        <div class="course-details">
+                            <p><strong>Duration:</strong> 3 weeks</p>
+                            <p><strong>Level:</strong> Beginner</p>
+                        </div>
+                        <p class="course-description">Master Microsoft Office tools and leverage AI features for productivity.</p>
+                        <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Enroll Now</a>
                     </div>
-                    <div class="course-details">
-                        <p><strong>Duration:</strong> 3 weeks</p>
-                        <p><strong>Level:</strong> Beginner</p>
-                    </div>
-                    <p class="course-description">Master Microsoft Office tools and learn how to leverage AI features for productivity and efficiency.</p>
-                    <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Enroll Now</a>
                 </div>
 
                 <!-- Course 3 -->
                 <div class="course-card">
-                    <div class="course-header">
-                        <h3>Web Development Basics</h3>
-                        <span class="course-price">₹600</span>
+                    <img src="/placeholder.svg?height=150&width=280" alt="Web Development Basics" class="course-image">
+                    <div class="course-content">
+                        <div class="course-header">
+                            <h3>Web Development Basics</h3>
+                            <span class="course-price">₹600</span>
+                        </div>
+                        <div class="course-details">
+                            <p><strong>Duration:</strong> 6 weeks</p>
+                            <p><strong>Level:</strong> Beginner</p>
+                        </div>
+                        <p class="course-description">Learn HTML, CSS, and JavaScript to build responsive websites.</p>
+                        <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Enroll Now</a>
                     </div>
-                    <div class="course-details">
-                        <p><strong>Duration:</strong> 6 weeks</p>
-                        <p><strong>Level:</strong> Beginner</p>
-                    </div>
-                    <p class="course-description">Learn HTML, CSS, and JavaScript to build responsive websites. Includes real-world projects and best practices.</p>
-                    <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Enroll Now</a>
                 </div>
 
                 <!-- Course 4 -->
                 <div class="course-card">
-                    <div class="course-header">
-                        <h3>Data Science Basics</h3>
-                        <span class="course-price">₹700</span>
+                    <img src="/placeholder.svg?height=150&width=280" alt="Data Science Basics" class="course-image">
+                    <div class="course-content">
+                        <div class="course-header">
+                            <h3>Data Science Basics</h3>
+                            <span class="course-price">₹700</span>
+                        </div>
+                        <div class="course-details">
+                            <p><strong>Duration:</strong> 8 weeks</p>
+                            <p><strong>Level:</strong> Intermediate</p>
+                        </div>
+                        <p class="course-description">Introduction to data analysis, visualization, and machine learning concepts.</p>
+                        <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Enroll Now</a>
                     </div>
-                    <div class="course-details">
-                        <p><strong>Duration:</strong> 8 weeks</p>
-                        <p><strong>Level:</strong> Intermediate</p>
-                    </div>
-                    <p class="course-description">Introduction to data analysis, visualization, and machine learning concepts using Python and popular libraries.</p>
-                    <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Enroll Now</a>
                 </div>
 
                 <!-- Course 5 -->
                 <div class="course-card">
-                    <div class="course-header">
-                        <h3>Spoken English Add-on</h3>
-                        <span class="course-price">₹300</span>
+                    <img src="/placeholder.svg?height=150&width=280" alt="Spoken English Add-on" class="course-image">
+                    <div class="course-content">
+                        <div class="course-header">
+                            <h3>Spoken English Add-on</h3>
+                            <span class="course-price">₹300</span>
+                        </div>
+                        <div class="course-details">
+                            <p><strong>Duration:</strong> 4 weeks</p>
+                            <p><strong>Level:</strong> All Levels</p>
+                        </div>
+                        <p class="course-description">Improve your English communication skills for professional conversations.</p>
+                        <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Enroll Now</a>
                     </div>
-                    <div class="course-details">
-                        <p><strong>Duration:</strong> 4 weeks</p>
-                        <p><strong>Level:</strong> All Levels</p>
-                    </div>
-                    <p class="course-description">Improve your English communication skills with focus on professional and everyday conversations.</p>
-                    <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Enroll Now</a>
                 </div>
 
                 <!-- Course 6 -->
                 <div class="course-card">
-                    <div class="course-header">
-                        <h3>Digital Marketing Basics</h3>
-                        <span class="course-price">₹500</span>
+                    <img src="/placeholder.svg?height=150&width=280" alt="Digital Marketing Basics" class="course-image">
+                    <div class="course-content">
+                        <div class="course-header">
+                            <h3>Digital Marketing Basics</h3>
+                            <span class="course-price">₹500</span>
+                        </div>
+                        <div class="course-details">
+                            <p><strong>Duration:</strong> 5 weeks</p>
+                            <p><strong>Level:</strong> Beginner</p>
+                        </div>
+                        <p class="course-description">Learn SEO, social media marketing, and content creation strategies.</p>
+                        <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Enroll Now</a>
                     </div>
-                    <div class="course-details">
-                        <p><strong>Duration:</strong> 5 weeks</p>
-                        <p><strong>Level:</strong> Beginner</p>
-                    </div>
-                    <p class="course-description">Learn SEO, social media marketing, and content creation strategies to build your online presence.</p>
-                    <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Enroll Now</a>
                 </div>
             </div>
         </div>
