--- a/index.html
+++ b/index.html
@@ -76,23 +76,58 @@
     <section class="testimonials">
         <div class="container">
             <h2 class="section-title">What Our Students Say</h2>
-            <div class="testimonials-slider">
+            <div class="testimonials-slider" id="testimonialsSlider">
+                <!-- Added profile images and restructured testimonial cards -->
                 <div class="testimonial-card">
                     <p class="testimonial-text">"AIET helped me learn Python from scratch. The practical approach and affordable fees made it perfect for me!"</p>
-                    <p class="testimonial-author">- Raj Kumar</p>
+                    <div class="testimonial-profile">
+                        <img src="/placeholder.svg?height=50&width=50" alt="Raj Kumar" class="testimonial-avatar">
+                        <div class="testimonial-author-info">
+                            <p class="testimonial-author">Raj Kumar</p>
+                            <p class="testimonial-role">Python Student</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="testimonial-card">
                     <p class="testimonial-text">"The instructors are very supportive and the curriculum is up-to-date with industry standards."</p>
-                    <p class="testimonial-author">- Priya Singh</p>
+                    <div class="testimonial-profile">
+                        <img src="/placeholder.svg?height=50&width=50" alt="Priya Singh" class="testimonial-avatar">
+                        <div class="testimonial-author-info">
+                            <p class="testimonial-author">Priya Singh</p>
+                            <p class="testimonial-role">Web Dev Student</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="testimonial-card">
                     <p class="testimonial-text">"I got an internship opportunity right after completing the Web Development course. Highly recommended!"</p>
-                    <p class="testimonial-author">- Amit Patel</p>
+                    <div class="testimonial-profile">
+                        <img src="/placeholder.svg?height=50&width=50" alt="Amit Patel" class="testimonial-avatar">
+                        <div class="testimonial-author-info">
+                            <p class="testimonial-author">Amit Patel</p>
+                            <p class="testimonial-role">Web Dev Intern</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="slider-controls">
-                <button class="slider-btn" id="prevBtn">❮</button>
-                <button class="slider-btn" id="nextBtn">❯</button>
+                <div class="testimonial-card">
+                    <p class="testimonial-text">"The AI course was eye-opening! I learned concepts that are directly applicable to real-world projects."</p>
+                    <div class="testimonial-profile">
+                        <img src="/placeholder.svg?height=50&width=50" alt="Neha Sharma" class="testimonial-avatar">
+                        <div class="testimonial-author-info">
+                            <p class="testimonial-author">Neha Sharma</p>
+                            <p class="testimonial-role">AI Student</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <p class="testimonial-text">"Best investment for my career! The mentorship and support from AIET team is exceptional."</p>
+                    <div class="testimonial-profile">
+                        <img src="/placeholder.svg?height=50&width=50" alt="Vikram Singh" class="testimonial-avatar">
+                        <div class="testimonial-author-info">
+                            <p class="testimonial-author">Vikram Singh</p>
+                            <p class="testimonial-role">Data Science Student</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
