--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
                 </button>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="courses.html">Courses</a></li>
+                    <!-- <li><a href="courses.html">Courses</a></li>
                     <li><a href="about.html" class="active">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li> -->
                 </ul>
             </div>
         </div>
