--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <title>About Us - AIET Coaching Center</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <!-- Font Awesome for social icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -23,9 +25,6 @@
                 </button>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html">Home</a></li>
-                    <!-- <li><a href="courses.html">Courses</a></li>
-                    <li><a href="about.html" class="active">About</a></li>
-                    <li><a href="contact.html">Contact</a></li> -->
                 </ul>
             </div>
         </div>
@@ -101,14 +100,26 @@
                 <div class="footer-section">
                     <h4>AIET Coaching Center</h4>
                     <p>Bringing AI & Computer Education to Rural Students</p>
+                    <!-- Added social media links with Font Awesome icons -->
+                    <div class="social-links">
+                        <a href="https://www.youtube.com/your-channel" target="_blank" rel="noopener noreferrer" title="YouTube" class="social-icon">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                        <a href="https://www.instagram.com/your-profile" target="_blank" rel="noopener noreferrer" title="Instagram" class="social-icon">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/company/your-company" target="_blank" rel="noopener noreferrer" title="LinkedIn" class="social-icon">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="courses.html">Courses</a></li>
+                        <li><a href="index.html#courses">Courses</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index.html#contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
