--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>AIET Coaching Center - Learn AI & Computer Skills</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <!-- Font Awesome for social icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -35,11 +37,19 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container">
-            <div class="hero-content">
-                <h2 class="hero-title">AIET Coaching Center</h2>
-                <p class="hero-subtitle">Learn Computers, AI & Career Skills</p>
-                <p class="hero-description">Affordable, practical, and future-ready training for rural students.</p>
-                <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Join Free Masterclass</a>
+            <div class="hero-wrapper">
+                <div class="hero-content">
+                    <h2 class="hero-title">AIET Coaching Center</h2>
+                    <p class="hero-subtitle">Learn Computers, AI & Career Skills</p>
+                    <p class="hero-description">Affordable, practical, and future-ready training for rural students.</p>
+                    <a href="https://forms.google.com/your-form-link" class="btn btn-primary" target="_blank">Join Free Masterclass</a>
+                </div>
+                <div class="hero-image-section">
+                    <div class="hero-image-container">
+                        <img src="/placeholder.svg?height=400&width=400" alt="AIET Coaching Center" class="hero-image">
+                        <div class="hero-image-overlay"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -297,26 +307,8 @@
                     </form>
                 </div>
             </div>
-
-            <!-- QR Section -->
-            <!-- <div class="qr-section-inline">
-                <h3 class="subsection-title">Connect on WhatsApp</h3>
-                <div class="qr-container">
-                <p>Scan the QR code below to connect with our community directly on WhatsApp</p>
-                    <img src="images\Whatsup.jpg"height="300"width="300" alt="WhatsApp QR Code" class="qr-code">
-                    <p>Or click <a href="https://chat.whatsapp.com/BiQW4tSAUPAEw2o1KqcSaT" target="_blank">here</a> to open WhatsApp</p>
-                </div>
-            </div> -->
-
-            <!-- Map Section -->
-            <!-- <div class="map-section-inline">
-                <h3 class="subsection-title">Find Us</h3>
-                <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3600.0!2d0!3d0!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMCww!5e0!3m2!1sen!2sin!4v1234567890" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
@@ -325,6 +317,17 @@
                 <div class="footer-section">
                     <h4>AIET Coaching Center</h4>
                     <p>Bringing AI & Computer Education to Rural Students</p>
+                    <div class="social-links">
+                        <a href="https://www.youtube.com/your-channel" target="_blank" rel="noopener noreferrer" title="YouTube" class="social-icon">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                        <a href="https://www.instagram.com/your-profile" target="_blank" rel="noopener noreferrer" title="Instagram" class="social-icon">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/company/your-company" target="_blank" rel="noopener noreferrer" title="LinkedIn" class="social-icon">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
